@@ -24,7 +24,6 @@ import org.elasticsearch.xcontent.json.JsonXContent;
 import org.junit.After;
 
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -43,7 +42,7 @@ public class GeoIpDownloaderStatsIT extends AbstractGeoIpIT {
 
     @Override
     protected Collection<Class<? extends Plugin>> nodePlugins() {
-        return Arrays.asList(ReindexPlugin.class, IngestGeoIpPlugin.class, GeoIpProcessorNonIngestNodeIT.IngestGeoIpSettingsPlugin.class);
+        return List.of(ReindexPlugin.class, IngestGeoIpPlugin.class, GeoIpProcessorNonIngestNodeIT.IngestGeoIpSettingsPlugin.class);
     }
 
     @Override
@@ -81,10 +80,10 @@ public class GeoIpDownloaderStatsIT extends AbstractGeoIpIT {
         assertBusy(() -> {
             GeoIpDownloaderStatsAction.Response res = client().execute(GeoIpDownloaderStatsAction.INSTANCE, req).actionGet();
             XContentTestUtils.JsonMapView view = new XContentTestUtils.JsonMapView(convertToMap(res));
-            assertThat(view.get("stats.successful_downloads"), equalTo(3));
+            assertThat(view.get("stats.successful_downloads"), equalTo(4));
             assertThat(view.get("stats.failed_downloads"), equalTo(0));
             assertThat(view.get("stats.skipped_updates"), equalTo(0));
-            assertThat(view.get("stats.databases_count"), equalTo(3));
+            assertThat(view.get("stats.databases_count"), equalTo(4));
             assertThat(view.get("stats.total_download_time"), greaterThan(0));
             Map<String, Map<String, List<Map<String, Object>>>> nodes = view.get("nodes");
             assertThat(nodes.values(), hasSize(greaterThan(0)));
@@ -92,7 +91,7 @@ public class GeoIpDownloaderStatsIT extends AbstractGeoIpIT {
                 assertThat(value, hasKey("databases"));
                 assertThat(
                     value.get("databases").stream().map(m -> m.get("name")).collect(Collectors.toSet()),
-                    containsInAnyOrder("GeoLite2-City.mmdb", "GeoLite2-ASN.mmdb", "GeoLite2-Country.mmdb")
+                    containsInAnyOrder("GeoLite2-City.mmdb", "GeoLite2-ASN.mmdb", "GeoLite2-Country.mmdb", "MyCustomGeoLite2-City.mmdb")
                 );
             }
         });
@@ -122,7 +121,7 @@ public class GeoIpDownloaderStatsIT extends AbstractGeoIpIT {
             builder.endObject();
             bytes = BytesReference.bytes(builder);
         }
-        assertAcked(client().admin().cluster().preparePutPipeline("_id", bytes, XContentType.JSON).get());
+        assertAcked(clusterAdmin().preparePutPipeline("_id", bytes, XContentType.JSON).get());
     }
 
     public static Map<String, Object> convertToMap(ToXContent part) throws IOException {
